<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <CheckBoxPreference
        android:key="pref_send_loc"
        android:title="@string/send_loction_title"
        android:summary="@string/send_location_summ"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="pref_username"
        android:title="username"
        android:summary="testsum"
        android:defaultValue="@string/standard_username"
        />
    <EditTextPreference
        android:key="pref_zoom"
        android:title="@string/pref_zoom_title"
        android:summary="@string/pref_zoom_summ"
        android:inputType="numberDecimal"
        android:defaultValue="10.0"
        />

    <PreferenceCategory
        android:title="@string/pref_deelgebieden"
        android:key="pref_delgebieden">
        <CheckBoxPreference
            android:key="pref_vos_a"
            android:title="@string/alpha"
            android:summary="@string/alpha_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_vos_b"
            android:title="@string/bravo"
            android:summary="@string/bravo_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_vos_c"
            android:title="@string/charlie"
            android:summary="@string/charlie_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_vos_d"
            android:title="@string/delta"
            android:summary="@string/delta_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_vos_e"
            android:title="@string/echo"
            android:summary="@string/echo_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_vos_f"
            android:title="@string/foxtrot"
            android:summary="@string/foxtrot_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_vos_x"
            android:title="@string/xray"
            android:summary="@string/xray_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_hunter"
            android:title="@string/tail"
            android:summary="@string/tail_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_sc"
            android:title="@string/sc"
            android:summary="@string/sc_sum"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_foto"
            android:title="@string/foto"
            android:summary="@string/foto_sum"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="debug"
        android:key="pref_delgebieden">
        <CheckBoxPreference
            android:key="pref_debug"
            android:title="@string/send_debug_title"
            android:summary="@string/send_debug_summ"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_post"
            android:title="@string/send_post_title"
            android:summary="@string/send_post_summ"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>